fix: spacing between filter and search

--- a/src/components/EventList/EventList.css
+++ b/src/components/EventList/EventList.css
@@ -17,13 +17,19 @@
   display: flex;
   flex-direction: column;
 }
+.filterTitle{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
 .filter{
   width: 80%;
   
   margin-left: 10%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 .filter > p{
